# rag-chat-cli

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  PLAN.md  README.md  README.zh-CN.md  alembic.ini  config.json  docker-compose.yml  main.py  pyproject.toml  settings.py
.codebuddy/rules/: rtk-command-rule.md
.github/workflows/: ci.yml  deploy-hf-backend.yml  deploy-hf-keep-alive.yml  deploy-hf-minio.yml  deploy-hf-ollama.yml  keepalive-hf.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_add_tool_message_fields.py  0003_add_user_memories.py  0004_providers_prefs.py  0005_embed_pref.py  0006_model_meta.py  0007_session_pin.py  0008_shares_bookmarks.py  0009_orgs_and_wiki.py  0010_wikis_layer.py  0011_wiki_body_markdown.py  0012_wiki_page_shares.py  0013_document_body_column.py  0014_message_sources.py  0015_assets.py  0016_asset_hashes.py  0017_message_evaluations.py  0018_user_identities.py
api/: __init__.py  app.py  chat_deps.py  chat_service.py  cookies.py  deps.py
api/middleware/: __init__.py  client_id.py  errors.py  logging.py  path_cors.py  request_id.py
api/routers/: __init__.py  _chat_helpers.py  assets.py  auth.py  bookmarks.py  chat.py  chat_stream.py  chat_ws.py  health.py  knowledge.py  me.py  orgs.py  providers.py  shares.py  wiki.py
api/schemas/: __init__.py  asset.py  auth.py  chat.py  common.py  knowledge.py  me.py  org.py  provider.py  share.py  wiki.py
api/streaming/: __init__.py  protocol.py  sse.py
app/: __init__.py  auth_local.py  chat_app.py  cli.py
clients/tui/: README.md  package.json  pnpm-lock.yaml  rslib.config.ts  tsconfig.json
configs/: lora_training_config.json  training_data_config.json
conversations/: conv_20260420_030925_720693.json  conv_20260420_031315_207685.json  conv_20260420_032041_839723.json  conv_20260420_032604_823006.json  conv_20260420_033115_902741.json  conv_20260420_033952_982368.json  conv_20260420_034318_740014.json  conv_20260424_061214_777975.json  conversation_36397fdc-ca4b-446d-a323-36cfa7d65b8f.json  conversation_8a198c48-a2b3-4285-a791-1a1ac9effc8b.json  conversation_aff8431d-d7b4-4c82-888c-673efacb14dd.json
core/: __init__.py  chat_service.py  history.py  limits.py  observability.py  prompts.py  titles.py  tokens.py
core/auth/: service.py  tokens.py
core/knowledge/: __init__.py  base.py  ingest.py  local.py  pgvector.py  reflect.py  rerank.py
core/llm/: __init__.py  client.py  ollama.py  openai.py
core/mcp/: __init__.py  adapter.py  client.py
core/memory/: __init__.py  chat_memory.py  user_memory.py
core/providers/: __init__.py  runtime.py
core/streaming/: abort.py  events.py
core/tools/: __init__.py  base.py  registry.py
core/workers/: __init__.py  queue.py  worker.py
data/: train.json
db/: __init__.py  session.py  url.py
db/models/: __init__.py  chunk.py  document.py  message.py  message_bookmark.py  message_share.py  model_metadata.py  org.py  org_member.py  preference.py  provider.py  session.py  token.py  user.py  user_memory.py  wiki.py  wiki_member.py  wiki_page.py  wiki_page_share.py
deploy/backend/: entrypoint.sh  render.yaml
deploy/hf-keep-alive/: .dockerignore  Dockerfile  README.md  app.py
deploy/websites/: render.yaml
docs/: API.md  ARCHITECTURE.md  AUTH_DESIGN.md  DEPLOY_BACKEND_DOCKER.md  DEPLOY_FREE_STACK.md  DESIGN_PATTERNS.md  DEVELOPMENT.md  FRONTEND_NEXT_OPTIMIZATION.md  README.md  ROADMAP.md  STREAM_PROTOCOL.md  openapi.json
docs/ai/: CHAT_OBSERVABILITY_EVALUATION_VISION.md  WEB_SEARCH_CONTEXT_OPTIMIZATION.md
docs/backend/: AUTH_DESIGN.md  DEVELOPMENT.md  ERROR_CODES.md  MULTI_CLIENT_AUTH_DESIGN.md  REDIS_INTEGRATION.md  SERVICE_LAYOUT.md  STREAM_PROTOCOL.md
docs/engineering/: CODE_REVIEW_CHECKLIST.md  PRINCIPLES.md
docs/fe/: DEPLOY_WEBSITES.md  FRONTEND_SSR_MVC.md
docs/images/: README.md
docs/ollama/: OLLAMA_CAPABILITIES_ADAPTATION.md
docs/ops/: DEPLOY_BACKEND_DOCKER.md  DEPLOY_FREE_STACK.md  KEEPALIVE.md
knowledge/: README.md  index.json
scripts/: check_commit_msg.py  check_coverage.py  db_init.py  deploy-hf-minio.sh  deploy-hf-ollama.sh  dump_openapi.py  generate_training_data.py  lora_train.py  quality.py
service/: __init__.py  errors.py
service/auth/: __init__.py  errors.py  identities.py  password.py  service.py  tokens.py
service/chat/: __init__.py  _events.py  _sources.py  _think_filter.py  _tool_helpers.py  factory.py  history.py  limits.py  prompts.py  service.py  titles.py  tokens.py
service/common/: __init__.py  observability.py
service/core/: __init__.py
service/db/: __init__.py  base.py  session.py  url.py
service/evaluation/: __init__.py  service.py
service/knowledge/: __init__.py  base.py  ingest.py  local.py  pgvector.py  reflect.py  rerank.py  service.py
service/llm/: __init__.py  _base_http.py  _http_errors.py  client.py  ollama.py  openai.py  rate_limit.py
service/mcp/: __init__.py  adapter.py  client.py
service/memory/: __init__.py  chat_memory.py  user_memory.py
service/orgs/: __init__.py  policy.py
service/platform/: __init__.py  redis.py
service/providers/: __init__.py  crypto.py  dto.py  errors.py  model_kinds.py  runtime.py  types.py
service/storage/: __init__.py  base.py  factory.py  local.py  s3.py  vision.py
service/streaming/: __init__.py  error_codes.py  events.py
service/tools/: __init__.py  (+3 more)
tests/: conftest.py
tui/: auth_local.py  chat_app.py  cli.py
ui/: __init__.py  app.py  chat_view.py  commands.py  console.py  markdown.py  prompt.py  sessions_pane.py  state.py  status_bar.py  theme.py  transcript.py  transcript_pane.py
utils/: __init__.py  chat_memory.py  config.py  console_ui.py  data_loader.py  knowledge_base.py  logger.py  task_scheduler.py
web-app/: .env.example  .prettierrc.json  .stylelintrc.json  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
websites/: .dockerignore  .prettierignore  .vade-report  AGENTS.md  CLAUDE.md  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
(+571 files in other folders)
