[project]
name = "rag-chat-cli"
version = "0.1.0"
description = "An interactive chat tool powered by Ollama with knowledge base and conversation memory support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "httpx",
    "boto3>=1.34",
    "pydantic-settings>=2.2",
    # Database layer (P4): SQLAlchemy 2.x async + asyncpg + pgvector + Alembic.
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.2.5",
    "greenlet>=3.0",  # required by SQLAlchemy asyncio
    # Auth layer (P6 add-jwt-auth): JWT + bcrypt + EmailStr validator.
    # passlib 1.7.4 is not compatible with bcrypt>=5; pin to bcrypt 4.x.
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5.0",
    "email-validator>=2.1",
    # HTTP layer (P6 add-fastapi-rest-api): FastAPI + uvicorn.
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",  # FastAPI form parsing (optional but commonly needed)
    # Workers (#23 P5.4): async Redis client for background job queue.
    "redis>=5.0",
    "pillow>=12.2.0",
]

[project.optional-dependencies]
# LoRA 训练相关（仅 `scripts/lora_train.py` 与 `utils/model/trainer.py` 需要）。
# 在 macOS x86_64 上这些库普遍无 wheel，因此从核心依赖剥离。
# 训练用途请使用 `uv sync --extra train`。
train = [
    "datasets",
    "transformers",
    "torch",
    "peft",
    "bitsandbytes",
]

# 开发期工具（格式化、类型检查、Git hooks）。
# 安装方式：`uv sync --all-extras` 或 `uv sync --extra dev`。
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    # SQLite async driver — supports sqlite+aiosqlite development URLs.
    "aiosqlite>=0.20",
]

# ---------------------------------------------------------------------------
# ruff — single source of truth for style + lint
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["."]
# 历史归档的 change 目录里有大段 proposal 代码片段，不该被 lint。
extend-exclude = [
    "openspec/changes/archive",
    ".venv",
    "conversations",
    # Path-anchored: only the ROOT-level ``knowledge/`` (user-provided
    # ingestion targets), NOT the source dir ``service/knowledge/``. The
    # bare pattern ``knowledge`` would match any directory of that name
    # anywhere — silently hiding ``service/knowledge/`` from lint, which
    # is what we DO want linted.
    "/knowledge",
]

[tool.ruff.lint]
select = [
    "E", "W", "F",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "ASYNC",         # async-specific
    "S",             # bandit-lite
    "T20",           # no print
]
ignore = [
    "E501",  # line length → formatter 负责
    "S101",  # assert，测试里常用
    "S311",  # pseudo-random acceptable (we use secrets where it matters)
    "SIM108", # ternary-vs-if-else 有时会降低可读性
    # 项目刻意使用中文全角标点作为 docstring / comment / 错误消息的一部分。
    # 全盘替换会损毁语义；单独忽略这三条规则（RUF* 其余规则仍然开启）。
    "RUF001", "RUF002", "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T20", "S"]
"service/knowledge/ingest.py" = ["ASYNC240"]  # ingestion reads local files synchronously by design
# S105/S106 mis-fire on the string literals "access"/"refresh"/"bearer" which
# name *token kinds*, not secrets. Scope the exception to the two auth DTOs.
"service/auth/tokens.py" = ["S105", "S106"]
"service/auth/service.py" = ["S105", "S106"]
"api/schemas/auth.py" = ["S105"]
# `Depends(...)` in default values is the idiomatic FastAPI pattern; B008 is a
# false positive in the context of routers / deps.
"api/routers/**" = ["B008"]
"api/deps.py" = ["B008"]
"service/chat/factory.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

# ---------------------------------------------------------------------------
# mypy — strict on business layers, relaxed on legacy / 3rd-party-stubless
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true

# settings.py 仍保留在根目录，作为跨 api/service/tui 的全局配置入口。
# 对 settings.py 放宽，避免配置层噪声影响业务层 strict 检查。
[[tool.mypy.overrides]]
module = "settings"
ignore_errors = true

# 第三方无 stub 的库，mypy strict 下会报 import-not-found；降级。
[[tool.mypy.overrides]]
module = [
    "httpx",
    # P4 DB layer
    "pgvector.*",
    "asyncpg",
    "asyncpg.*",
    "aiosqlite",
    "aiosqlite.*",
    "alembic",
    "alembic.*",
    # Object storage SDKs are runtime-only here and do not ship typing metadata.
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    # P6 auth dependencies; stubs are incomplete or absent.
    "jose",
    "jose.*",
    "passlib",
    "passlib.*",
]
ignore_missing_imports = true

# scripts 不属于 core API，允许 Any-call 简化。
[[tool.mypy.overrides]]
module = ["scripts.*"]
disallow_untyped_decorators = false

# ---------------------------------------------------------------------------
# basedpyright — IDE-side type checker (CI 仍以 mypy 为 SSOT)
#
# 默认 strict 在 FastAPI / SQLAlchemy 项目里会刷出大量噪声 warning，与
# mypy 不一致。这里把规则集对齐到「跟 mypy 等价 + 能抓真 bug」的水平：
# - 关掉跟 FastAPI 惯用语冲突的规则（Depends(...) 在默认参数中是必需）
# - 关掉跟 SQLAlchemy ORM 动态属性冲突的规则
# - 保留 strict 下真正能抓 bug 的：return-type / argument-type / unused-import
#
# 修改后 IDE 报警与 `make typecheck` 输出在同一量级，避免「IDE 报红一片
# 但 CI 全绿」的认知失调。
# ---------------------------------------------------------------------------
[tool.basedpyright]
include = ["api", "service", "scripts", "settings.py"]
pythonVersion = "3.10"
typeCheckingMode = "standard"

# FastAPI 默认参数惯用 `Depends(...)` / `Query(...)` / `Header(...)`，
# 这是框架 API 设计要求，不是反模式。
reportCallInDefaultInitializer = "none"

# 业务层大量 await Session.execute(...) / scalar(...)，把返回值丢弃是
# 写入 / commit 的常态。逐个 `_ =` 没有信息量，在 mypy 里也不报。
reportUnusedCallResult = "none"

# SQLAlchemy 2.0 typed Mapped[...] 还没覆盖到所有 helper，session.scalar
# 等返回 Any。这是 SQLAlchemy 的 bug 不是业务问题。
reportAny = "none"
reportExplicitAny = "none"

# settings.py 是 Pydantic Settings 配置入口，与 mypy override 一致放宽。
[[tool.basedpyright.executionEnvironments]]
root = "settings.py"
reportMissingTypeStubs = "none"
